# scu-gpa-mcp-server

./: LICENSE  README.md  dockerfile  pyproject.toml  server.py  smithery.yaml
